# Ledger

./: .env.example  .gitignore  README.md  pyproject.toml
ledger/: __init__.py  cli.py  collectors.py  config.py  curate_manifest.py  dblp.py  finalize_results.py  funding.py  models.py  net.py  openalex.py  pdfs.py  pipeline.py  postprocess_pdfa.py  reporting.py  state.py  team.py
ledger_aimi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ops/cron/: ledger_weekly.cron
scripts/: run_weekly.sh
targets/: .gitignore  q1_dois.txt
tests/: test_config.py  test_curate_manifest.py  test_dblp_matching.py  test_document_verification.py  test_finalize_results.py  test_funding.py  test_pdfs.py  test_pipeline_pdfs.py  test_pubmed_matching.py  test_state_cache.py  test_team.py
