[project]
name = "ledger-aimi"
version = "0.1.0"
description = "AI-MI publication tracking and funding-acknowledgment crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "cloudscraper>=1.2.71",
  "lxml>=5.2.0",
  "pypdf>=5.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ledger = "ledger.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
